Updated data source description

--- a/Retail_Analytics_report_source_code.ipynb
+++ b/Retail_Analytics_report_source_code.ipynb
@@ -4,9 +4,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Customer Segmentation in Online Retail\n",
+    "## Customer Segmentation for Online Retail store\n",
     "\n",
-    "We endeavour to find the various customer segments using the online retail store's transaction data obtained from UCI Machine Learning Dataset repository. This is a transnational data set which contains all the transactions occurring between 01/12/2010 and 09/12/2011 for a UK-based and registered non-store online retail.\n",
+    "We endeavour to find the various customer segments using the online retail store's transaction data obtained from [UCI Machine Learning Dataset repository](http://archive.ics.uci.edu/ml/datasets/online+retail). This is a transnational data set which contains all the transactions occurring between 01/12/2010 and 09/12/2011 for a UK-based and registered non-store online retail.\n",
     "\n",
     "### The need of customer segmentation:   \n",
     "The differences in customers' behaviour, demographics, geographies, etc. help in classifying them in groups. Learning about different groups in the customer can help with following:    \n",
