Updated report formatting

--- a/Retail_Analytics_report_source_code.ipynb
+++ b/Retail_Analytics_report_source_code.ipynb
@@ -18,7 +18,7 @@
     "5. Revenue growth   \n",
     "\n",
     "\n",
-    "### Recency-Frequency-Monetary <font color=blue>(RFM) </font> model to determine customer value:    \n",
+    "### Recency-Frequency-Monetary (RFM)  model to determine customer value:    \n",
     "\n",
     "The RFM model is quite useful model in retail customer segmentation where only the data of customer transaction is available. RFM stands for the three dimensions:\n",
     "\n",
@@ -1417,7 +1417,7 @@
    "metadata": {},
    "source": [
     "### 7. Customer segmentation through clustering:\n",
-    "Clustering is an unsupervised classification techinque to understand the groups of classes in the data. We use the <font color=\"blue\">K-means clustering</font> algorithm to determine the ideal segments of customers.    \n",
+    "Clustering is an unsupervised classification techinque to understand the groups of classes in the data. We use the **K-means clustering algorithm** to determine the ideal segments of customers.    \n",
     "\n",
     "   \n",
     "<b><font color=\"brown\">Silhouette Analysis - Determine optimum number of segments</font></b>    \n",
@@ -1583,26 +1583,26 @@
     "\n",
     "<strong>1. Three Clusters (Customer Segments): </strong>    \n",
     "Carefully examining the three cluster classification, we observe following groups of customers:    \n",
-    " 1. *<b><font color=\"green\">High value customer: </font></b>*     \n",
-    " <b>'Cluster 2'</b> is the high value customer segment for the online retails store as the customers in this group place the highest value orders with a very high relative frequency than other members. They are also the ones who have transacted the most recently.    \n",
-    " 2. *<b><font color=\"blue\">Medium value customer: </font></b>*     \n",
-    " <b>'Cluster 0'</b> appears to be the medium valued customer segment. These customers place an order of a considerable amount, though not as much as high valued customers, but still quite higher than low valued customers. Also, their orders are relatively more frequent than the lowest value segment.    \n",
-    " 3. *<b><font color=\"brown\">Low value customer: </font></b>*    \n",
-    "  It is quite evident that <b>'Cluster 1'</b> has customers who rarely shop and when they order, their orders are pretty low valued. \n",
+    " 1. **High value customer:**     \n",
+    " *'Cluster 2'* is the high value customer segment for the online retails store as the customers in this group place the highest value orders with a very high relative frequency than other members. They are also the ones who have transacted the most recently.    \n",
+    " 2. **Medium value customer: **     \n",
+    " *'Cluster 0'* appears to be the medium valued customer segment. These customers place an order of a considerable amount, though not as much as high valued customers, but still quite higher than low valued customers. Also, their orders are relatively more frequent than the lowest value segment.    \n",
+    " 3. **Low value customer: **    \n",
+    "  It is quite evident that *'Cluster 1'* has customers who rarely shop and when they order, their orders are pretty low valued. \n",
     "     Apart from the numbers, the visualization of clusters in *Silhoutte Analysis* show that all three customer segments are quite distinct with very less overlapp between them. The general trend resonated in these 3 clusters is that high monetary value is correlated with high frequency of orders and more recent ones. \n",
     "   \n",
     "<strong>2. Five Clusters (Customer Segments): </strong>    \n",
     "In five clusters, we find the following customer segments:   \n",
-    " 1. *<b><font color=\"green\">Overall high valued customers: </font></b>*     \n",
-    " <b>'Cluster 0'</b> is the typical high value customer who has shopped recently and shops regularly for high value orders. \n",
-    " 2. *<b><font color=\"blue\">High monetary value but less frequent: </font></b>*     \n",
-    " <b>'Cluster 1'</b> represents a peculiar customer segment who place quite a high valued order but do not do so frequently or have not done much recently. But, these customers do hold a lot of promise if targeted to improve sales.        \n",
-    " 3. *<b><font color=\"purple\">Medium value - low frequency - recent customers: </font></b>*      \n",
-    "  The customers from <b>'Cluster 4'</b> have recently placed medium valued orders but do not do so frequently.     \n",
-    " 4. *<b><font color=\"orange\">Medium value - low frequency - older customers: </font></b>*  \n",
-    "  The customers from <b>'Cluster 3'</b> happen to place medium valued orders quite a long time ago and they do not do so frequently.     \n",
-    " 5. *<b><font color=\"brown\">Low valued customers: </font></b>*     \n",
-    " <b>'Cluster 2'</b> is the segment of customers who have not shopped in the longest time, nor do they shop frequently and their orders are of the lowest values.     \n",
+    " 1. **Overall high valued customers: **     \n",
+    " *'Cluster 0'* is the typical high value customer who has shopped recently and shops regularly for high value orders. \n",
+    " 2. **High monetary value but less frequent: **     \n",
+    " *'Cluster 1'* represents a peculiar customer segment who place quite a high valued order but do not do so frequently or have not done much recently. But, these customers do hold a lot of promise if targeted to improve sales.        \n",
+    " 3. **Medium value - low frequency - recent customers: **      \n",
+    "  The customers from *'Cluster 4'* have recently placed medium valued orders but do not do so frequently.     \n",
+    " 4. **Medium value - low frequency - older customers: **  \n",
+    "  The customers from *'Cluster 3'* happen to place medium valued orders quite a long time ago and they do not do so frequently.     \n",
+    " 5. **Low valued customers: **     \n",
+    " *'Cluster 2'* is the segment of customers who have not shopped in the longest time, nor do they shop frequently and their orders are of the lowest values.     \n",
     " The visualization of clusters in *Silhoutte Analysis* show some overlapp between the customer segments.    \n",
     " However, the dataset does not distinguish between wholesale and retail customers, it is quite likely that high value frequent clients are the wholesale dealers and medium/ low valued ones are individual retail purchasers.\n",
     " \n",
