Updated report formatting

--- a/Retail_Analytics_report_source_code.ipynb
+++ b/Retail_Analytics_report_source_code.ipynb
@@ -1579,7 +1579,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### <font color=\"blue\">Observations and Inferences:</font>    \n",
+    "### Observations and Inferences:  \n",
     "\n",
     "<strong>1. Three Clusters (Customer Segments): </strong>    \n",
     "Carefully examining the three cluster classification, we observe following groups of customers:    \n",
